# ozon-golang-school-yandex-contest

./: .editorconfig  LICENSE.md  README.md
taskA/: README.md  solution.py
taskB/: README.md  solution.sql
taskD/: README.md  solution.py
taskE/: README.md  solution.go
taskF/: .gitignore  CMakeLists.txt  README.md  build.sh  solution.cpp
